# sluice_store

./: .gitignore  db.sqlite3  manage.py  pyproject.toml
core/: forms.py  models.py  transactions.py  urls.py  utils.py  views.py
core/data/: et.csv
core/migrations/: 0001_initial.py  0002_alter_shipment_shipment_status.py  0003_add_default_group.py  0004_alter_shipment_item_count_and_more.py
core/templates/: about_us.html  base.html  home.html  order.html
core/templates/core/: shipment_admin_list.html  shipment_confirm.html  shipment_create.html  shipment_list.html
core/templates/registration/: login.html  register.html
sluice_store/: asgi.py  settings.py  urls.py  views.py  wsgi.py
theme/static_src/: package-lock.json  tailwind.config.js
