[project]
name = "sluice-store"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "chapa>=0.1.2",
    "crispy-tailwind>=1.0.3",
    "django-crispy-forms>=2.3",
    "django-tailwind[reload]>=3.6.0",
    "django>=4.2.17",
    "python-dotenv>=1.0.1",
]
